--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "method-override": "2.1.3",
     "mongoose": "4.4.12",
     "morgan": "1.1.1"
+  },
+  "scripts": {
+    "startApp": "node server.js"
   }
 }
